--- a/src/main/resources/templates/article/_header.html
+++ b/src/main/resources/templates/article/_header.html
@@ -1,9 +1,14 @@
-<header>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+
+<header xmlns:sec="http://www.w3.org/1999/xhtml">
     <h3>
         <a th:href="@{/}" class="title">Board Project</a>
     </h3>
     <p>
-        <a th:href="@{/user/info}" class="info">홍길동</a>님 반갑습니다.
+        <a th:href="@{/user/info}" class="info" sec:authentication="principal.user.nick">홍길동</a>님 반갑습니다.
         <a th:href="@{/user/login}">[로그아웃]</a>
     </p>
 </header>
+</html>
